[gd_scene format=3 uid="uid://wj38omrewmbu"]

[ext_resource type="Script" uid="uid://be5g4y8rdvx1l" path="res://addons/spatial_remarks/sr_dock/sr_dock.gd" id="1_7qbyi"]
[ext_resource type="PackedScene" uid="uid://djdcjn3f0srac" path="res://addons/spatial_remarks/sr_dock/sr_data_row.tscn" id="1_umhdo"]
[ext_resource type="PackedScene" uid="uid://cl2rc7egiv5em" path="res://addons/spatial_remarks/sr_dock/srd_detail.tscn" id="3_7qbyi"]

[node name="SrDock" type="PanelContainer" unique_id=666076509 node_paths=PackedStringArray("_content_vbc", "_srd_detail")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7qbyi")
_content_vbc = NodePath("VBoxContainer/ContentSC/ContentVBC")
_sr_data_row = ExtResource("1_umhdo")
_srd_detail = NodePath("VBoxContainer/SRDDetail")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1791926734]
layout_mode = 2

[node name="ButtonHBC" type="HBoxContainer" parent="VBoxContainer" unique_id=1791126513]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 2

[node name="RefreshButton" type="Button" parent="VBoxContainer/ButtonHBC" unique_id=1138907538]
layout_mode = 2
text = "Refresh"

[node name="ImportButton" type="Button" parent="VBoxContainer/ButtonHBC" unique_id=1920611336]
layout_mode = 2
disabled = true
text = "Import"

[node name="TitleHBC" type="HBoxContainer" parent="VBoxContainer" unique_id=1227464510]
layout_mode = 2
alignment = 1

[node name="SrDataRow" type="HBoxContainer" parent="VBoxContainer/TitleHBC" unique_id=890761630]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="VersionLabel" type="Label" parent="VBoxContainer/TitleHBC/SrDataRow" unique_id=1077649591]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Version"
text_overrun_behavior = 1

[node name="PositionLabel" type="Label" parent="VBoxContainer/TitleHBC/SrDataRow" unique_id=1511835587]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Position"
text_overrun_behavior = 1

[node name="TargetNodeLabel" type="Label" parent="VBoxContainer/TitleHBC/SrDataRow" unique_id=255994552]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Target"
text_overrun_behavior = 1

[node name="SceneLabel" type="Label" parent="VBoxContainer/TitleHBC/SrDataRow" unique_id=731281497]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Scene"
text_overrun_behavior = 1

[node name="AuthorLabel" type="Label" parent="VBoxContainer/TitleHBC/SrDataRow" unique_id=1760443710]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Author"
text_overrun_behavior = 1

[node name="TextLabel" type="Label" parent="VBoxContainer/TitleHBC/SrDataRow" unique_id=218992312]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Content"
text_overrun_behavior = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" unique_id=1985252332]
layout_mode = 2

[node name="ContentSC" type="ScrollContainer" parent="VBoxContainer" unique_id=417190874]
clip_contents = false
custom_minimum_size = Vector2(100, 300)
layout_mode = 2

[node name="ContentVBC" type="VBoxContainer" parent="VBoxContainer/ContentSC" unique_id=456569099]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer" unique_id=1984169650]
layout_mode = 2

[node name="SRDDetail" parent="VBoxContainer" unique_id=2122743516 instance=ExtResource("3_7qbyi")]
layout_mode = 2

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="pressed" from="VBoxContainer/ButtonHBC/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonHBC/ImportButton" to="." method="_on_import_button_pressed"]
